@@ -3,7 +3,7 @@ Section: misc
 Priority: optional
 Maintainer: Jakub Adam <jakub.adam@ktknet.cz>
 Homepage: http://sipe.sourceforge.net/
-Build-Depends: dpkg-dev (>= 1.16.1~), debhelper (>= 7), autotools-dev, pkg-config,
+Build-Depends: dpkg-dev (>= 1.16.1~), debhelper (>= 9), autotools-dev, pkg-config,
  libglib2.0-dev (>= 2.12.0), libxml2-dev, libpurple-dev (>= 2.4.0), libtool,
  intltool, libkrb5-dev, libzephyr-dev, libnss3-dev, libnice-dev (>= 0.1.4),
  libgstreamer0.10-dev
